<resources>
    <string name="app_name">onggiyonggi</string>

    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_pw">비밀번호</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_email">이메일</string>
    <string name="sign_up_check">중복확인</string>
    <string name="sign_up_done">완료</string>
    <string name="sign_up_id_ok">사용 가능한 아이디입니다.</string>
    <string name="sign_up_id_error">이미 사용 중인 아이디입니다.</string>
    <string name="sign_up_id_confirm">아이디 중복확인을 해주세요.</string>
    <string name="sign_up_pw_ok">사용 가능한 비밀번호입니다.</string>
    <string name="sign_up_pw_error">비밀번호가 일치하지 않습니다!</string>
    <string name="sign_up_pw_not_ok">영어, 숫자, 특수문자를 포함하여 8자 이상이어야 합니다.</string>
    <string name="sign_up_pw_null">비밀번호를 먼저 입력해주세요.</string>
    <string name="sign_up_nickname_ok">사용 가능한 닉네임입니다.</string>
    <string name="sign_up_nickname_error">이미 사용 중인 닉네임 입니다.</string>
    <string name="sign_up_nickname_confirm">닉네임 중복확인을 해주세요.</string>
    
    <string name="sign_up_agreement_terms_of_use">서비스 이용 약관</string>
    <string name="sign_up_agreement_user_info_agree">개인정보 수집/이용 동의</string>
    <string name="sign_up_agreement_user_third_party_info_agree">개인정보 제3자 정보제공 동의</string>
    <string name="sign_up_agreement_location_agree">위치 기반 서비스 제공 동의</string>

    <string name="login_id_null">아이디를 입력해주세요.</string>
    <string name="login_pw_null">비밀번호를 입력해주세요.</string>
    <string name="login_id_error">회원이 존재하지 않습니다.</string>
    <string name="login_pw_error">비밀번호가 올바르지 않습니다.</string>

    <string name="store_name">스타벅스 광교역점</string>
    <string name="store_address">경기도 수원시 영통구 이의동 대학로 47</string>
    <string name="store_time">정보없음</string>

    <string name="store_review_title">리뷰</string>
    <string name="receipt_photo_title">영수증 사진을 화면에 맞게 찍어주세요</string>
    <string name="food_photo_title">음식을 담은 다회용기 사진을 찍어주세요</string>

    <string name="write_review_title">리뷰 작성</string>
    <string name="write_date">2025년 3월 15일 토</string>
    <string name="write_food_name">품명</string>
    <string name="write_food_unit_price">단가</string>
    <string name="write_food_count">수량</string>
    <string name="write_food_total_price">금액</string>
    <string name="write_rephoto">다시 찍기</string>

    <string name="write_select_container_type">어떤 용기를 가져갔나요?</string>
    <string name="write_select_container_size">용기의 크기는 어땠나요?</string>
    <string name="write_select_fill_level">음식 양은 어땠나요?</string>
    <string name="write_select_food_taste">음식 맛은 어땠나요?</string>

    <string name="write_review">상세한 리뷰를 적어주세요!</string>
    <string name="write_review_number_of_character">%d/200</string>
    <string name="write_register">등록하기</string>

    <string name="review_complete_text">리뷰 등록 완료!</string>
    <string name="review_complete_character_likeability">%1s의 호감도가 %2s 증가했어요!</string>
    <string name="review_complete_character_complete">축하합니다! %s의 호감도가 %s%%가 되었어요! &#10;\'캐릭터 보러가기\'를 터치하여 컬렉션에 추가해볼까요?</string>
    <string name="review_complete_go_character">캐릭터 보러가기</string>
    <string name="review_complete_good_life">일회용기 NO! \n다회용기로 친환경 라이프 실천 중!</string>
    <string name="review_complete_my_review">내가 작성한 리뷰</string>
    <string name="review_complete_next">리뷰 모아보기</string>

    <string name="review_detail_title">리뷰 상세</string>
    <string name="review_detail_what">용기</string>
    <string name="review_detail_size">크기</string>
    <string name="review_detail_amount">양</string>
    <string name="review_detail_taste">맛</string>

    <string name="home_search">검색</string>
    <string name="search_recent">최근 검색</string>
    <string name="search_delete_all">전체 삭제</string>

    <string name="store_register_new">첫 리뷰 등록</string>
    <string name="store_register_ban">제보하기</string>
    <string name="store_register_what">어떤 가게 인가요?</string>
    <string name="store_register_where">어느 가게를 등록하나요?</string>
    <string name="store_register_time_null">시간 정보가 없습니다.</string>
    <string name="store_register_error">이미 등록된 가게입니다!</string>
    <string name="store_register_ban_complete">제보가 완료되었습니다!</string>
    
    <string name="store_ban_text"> 아직 다회용기 사용이 어려운 가게입니다. \n혹시 해당 가게에서 다회용기 사용을 하셨나요? </string>
    <string name="store_ban_double">경험치 2배!</string>
    <string name="store_ban_btn">첫 리뷰 등록하러 가기</string>

    <!-- character -->
    <string name="character_affection_title">호감도</string>
    <string name="character_affection_percent">%d%%</string>
    <string name="character_collection">컬렉션</string>
    <string name="character_max_collection">%s가 컬렉션에 추가되었습니다!</string>

    <!--my-->
    <string name="my_review_count">%d개</string>

    <!-- mock data -->

    <string name="write_food_name_mock">스타벅스 프렌치 바닐라 라떼</string>
    <string name="write_food_unit_price_input">%d원</string>
    <string name="write_food_count_mock">2</string>
    <string name="write_food_total_price_input">%d원</string>
    <string name="write_container_type">텀블러</string>
    <string name="write_container_size">중간 사이즈</string>


    <string name="write_select_answer0">텀블러</string>
    <string name="write_select_answer1">접시</string>
    <string name="write_select_answer2">락앤락</string>
    <string name="write_select_answer3">냄비</string>
    <string name="write_select_answer4">유리컵</string>


    <string name="write_select_2_answer0">부족해요</string>
    <string name="write_select_2_answer1">적당해요</string>
    <string name="write_select_2_answer2">커요</string>


    <string name="write_select_3_answer0">맛있어요</string>
    <string name="write_select_3_answer1">신선해요</string>
    <string name="write_select_3_answer2">건강해요</string>
    <string name="write_select_3_answer3">느끼해요</string>
    <string name="write_select_3_answer4">매워요</string>
    <string name="write_select_3_answer5">달달해요</string>

    <string name="write_select_question4">서비스는 어땠나요?</string>
    <string name="write_select_4_answer0">음식이 빨리 나와요</string>
    <string name="write_select_4_answer1">음식이 늦어요</string>
    <string name="write_select_4_answer2">직원이 친절해요</string>
    <string name="write_select_4_answer3">위생이 아쉬워요</string>
    
    <string name="search_name_mock">핵밥 수원경기대점</string>
    <string name="search_address_mock">경기 수원시 영통구 대학3로4번길 2 108</string>
    <string name="search_name_mock2">탐앤탐스 광교역경기대점</string>
    <string name="search_address_mock2">경기 수원시 영통구 대학3로4번길 12 이스턴타워 108호</string>
    <string name="search_name_mock3">배부장찌개 수원광교점</string>
    <string name="search_address_mock3">경기 수원시 영통구 대학1로54번길 14</string>
    <string name="search_name_mock4">완미족발 수원경기대점</string>
    <string name="search_address_mock4">경기 수원시 영통구 대학1로50번길 8 1층</string>

    <string name="character_collection_name_mock">하늘다람쥐</string>
</resources>