<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_food"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/img_review1"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/tv_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_food"/>

    <TextView
        android:id="@+id/tv_store_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/store_address"
        android:textSize="16sp"
        android:textColor="@color/store_address_gray"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_store_name"
        app:layout_constraintStart_toStartOf="@id/tv_store_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_rephoto"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rephoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/write_rephoto"
        android:textSize="13sp"
        android:textColor="@color/store_text_gray"
        android:gravity="end|center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:backgroundTint="@color/white"
        android:stateListAnimator="@null"
        android:elevation="10dp"
        app:cornerRadius="6dp"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintWidth_percent="0.22"
        app:layout_constraintBottom_toBottomOf="@id/iv_food"
        app:layout_constraintStart_toStartOf="@id/tv_store_name"/>

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_camera_darkgreen_28"
        android:layout_marginStart="5dp"
        android:translationZ="13dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/btn_rephoto"
        app:layout_constraintTop_toTopOf="@id/btn_rephoto"
        app:layout_constraintBottom_toBottomOf="@id/btn_rephoto"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_date"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/iv_food"
        app:layout_constraintStart_toStartOf="@id/iv_food"/>

    <TextView
        android:id="@+id/tv_food_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/write_food_name"
        android:textColor="@color/store_address_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="@id/iv_food"/>

    <TextView
        android:id="@+id/tv_food_unit_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_food_unit_price"
        android:textColor="@color/store_address_gray"
        app:layout_constraintTop_toTopOf="@id/tv_food_name_title"
        app:layout_constraintStart_toEndOf="@id/gl_w40"/>

    <TextView
        android:id="@+id/tv_food_count_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_food_count"
        android:textColor="@color/store_address_gray"
        app:layout_constraintTop_toTopOf="@id/tv_food_name_title"
        app:layout_constraintStart_toEndOf="@id/gl_w60"/>

    <TextView
        android:id="@+id/tv_food_total_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_food_total_price"
        android:textColor="@color/store_address_gray"
        app:layout_constraintTop_toTopOf="@id/tv_food_name_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_w40"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_w60"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>

</androidx.constraintlayout.widget.ConstraintLayout>