<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_ban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_ban_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_register"/>

    <TextView
        android:id="@+id/tv_double"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_ban_double"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:text="@string/store_ban_btn"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>