<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/write_food_name_mock"
        android:paddingStart="0dp"
        android:paddingEnd="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_w40"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_unit_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/write_food_unit_price_input"
        android:textColor="@color/store_address_gray"
        android:paddingStart="0dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toStartOf="@id/gl_w60"
        app:layout_constraintStart_toEndOf="@id/gl_w40"
        app:layout_constraintTop_toTopOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/write_food_count_mock"
        android:textColor="@color/store_address_gray"
        app:layout_constraintStart_toEndOf="@id/gl_w60"
        app:layout_constraintTop_toTopOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/write_food_total_price_input"
        android:paddingStart="2dp"
        android:paddingEnd="0dp"
        android:gravity="end"
        app:layout_constraintStart_toEndOf="@id/tv_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_name"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_w40"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_w60"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>

</androidx.constraintlayout.widget.ConstraintLayout>