<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:background="@drawable/btn_back"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.13" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_register_new"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_what"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/store_register_what"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_cafe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="-10dp"
        android:background="@drawable/btn_cafe"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintStart_toStartOf="@id/tv_what"
        app:layout_constraintTop_toBottomOf="@id/tv_what"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_restaurant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_restaurant"
        android:layout_marginStart="10dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintStart_toEndOf="@id/btn_cafe"
        app:layout_constraintTop_toTopOf="@id/btn_cafe"/>

    <TextView
        android:id="@+id/tv_where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_register_where"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_cafe"
        app:layout_constraintStart_toStartOf="@id/tv_what"/>

    <SearchView
        android:id="@+id/sv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:queryHint="@string/home_search"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_where"
        app:layout_constraintStart_toStartOf="@id/tv_where"/>

    <com.naver.maps.map.MapView
        android:id="@+id/mv_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/sv_search"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/store_register_error"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/mv_map"
        app:layout_constraintStart_toStartOf="@id/mv_map"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/rv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/sv_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_search"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/write_register"
        android:textColor="@color/white"
        android:background="@drawable/btn_register"
        android:visibility="invisible"
        app:layout_constraintDimensionRatio="2.5:1"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>