<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_store"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_store"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_store_name"
        app:layout_constraintWidth_percent="0.3"/>

    <TextView
        android:id="@+id/tv_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_store"
        app:layout_constraintTop_toTopOf="@id/iv_store" />

    <TextView
        android:id="@+id/tv_store_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_address"
        android:textSize="14sp"
        android:textColor="@color/store_address_gray"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="@id/tv_store_name"
        app:layout_constraintTop_toBottomOf="@id/tv_store_name"/>

    <TextView
        android:id="@+id/tv_store_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_time"
        android:textSize="14sp"
        android:textColor="@color/store_address_gray"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="@id/tv_store_name"
        app:layout_constraintTop_toBottomOf="@id/tv_store_address"/>

    <ImageView
        android:id="@+id/iv_pin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:src="@drawable/ic_pin_green"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_store"
        app:layout_constraintStart_toStartOf="@id/tv_store_name"
        app:layout_constraintWidth_percent="0.06"
        app:layout_constraintDimensionRatio="1:1"/>

    <View
        android:id="@+id/v_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/store_line_gray"
        app:layout_constraintTop_toBottomOf="@id/iv_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1" />

    <TextView
        android:id="@+id/tv_review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_review_title"
        android:textSize="16sp"
        android:textColor="@color/store_text_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        app:layout_constraintStart_toStartOf="@id/iv_store" />

    <Button
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="최신순"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/tv_review_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_review_title"
        app:layout_constraintStart_toEndOf="@id/tv_review_title"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_sort"/>

</androidx.constraintlayout.widget.ConstraintLayout>